@@ -4,12 +4,12 @@
 use strict;
 use Test::More;
 use Net::DNS;
+use Net::DNS::DomainName;
 use Net::DNS::Parameters;
 local $Net::DNS::Parameters::DNSEXTLANG;			# suppress Extlang type queries
 
 my @prerequisite = qw(
 		Net::DNS::RR::NSEC
-		Net::DNS::DomainName
 		);
 
 foreach my $package (@prerequisite) {
@@ -18,13 +18,17 @@ foreach my $package (@prerequisite) {
 	exit;
 }
 
-plan tests => 79;
+plan tests => 80;
 
 
 my $rr = new Net::DNS::RR(
 	type	 => 'NSEC',
 	nxtdname => 'irrelevant',
 	);
+
+is( $rr->typecovered(0), undef, "typecovered() undefined for empty map" );
+$rr->typelist(1);
+is( $rr->typecovered(256), undef, "typecovered() undefined for empty map block" );
 
 foreach my $rrtype ( 0, 256, 512, 768, 1024 ) {
 	my $type = typebyval($rrtype);
@@ -44,19 +48,14 @@ foreach my $rrtype ( 0, 7, 8, 15, 16, 23, 24, 31, 32, 39 ) {
 	is( $l, 1 + ( $rrtype >> 3 ), "expected map length for $type" );
 }
 
-foreach my $rrtype ( 0 .. 40, 42 .. 64 ) {
+foreach my $rrtype ( 1 .. 40, 42 .. 64 ) {
 	my $type = typebyval($rrtype);
 	$rr->typelist($type);
-	my $rdata = $rr->rdata;
-	my ( $name, $offset ) = decode Net::DNS::DomainName( \$rdata );
-	my ( $w, $l, $bitmap ) = unpack "\@$offset CCa*", $rdata;
-	my $last = unpack 'C', reverse $bitmap;
-	is( $last, ( 0x80 >> ( $rrtype % 8 ) ), "expected map bit for $type" );
+	is( $rr->typecovered($type), 1, "expected map bit for $type" );
 }
 
 
 exit;
 
 __END__
-
 
