@@ -4,11 +4,15 @@ $Id$                       -*-text-*-
 **** 1.16 [unreleased]
 
 Feature
-	Add covered() and match() instance methods with similar
+	New NSEC3 encloser() and nextcloser() methods return closest
+	encloser and "next closer" name respectively..
+
+Feature
+	Add covered() and match() NSEC instance methods with similar
 	semantics to those in NSEC3.
 
 Feature
-	New NSEC3 encloser() method searches for closest encloser.
+	New NSEC and NSEC3 typecovered() method interrogates type list.
 
 
 **** 1.15 Feb 9, 2018
